--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color:#EEEBDD">
     <h1 style="font-style: italic; color:#FF0000; text-align: center;";>C-CLUB</h1>
-    <img src="assets\media\images\c_club.jpg " alt="c_club image" style=" border-radius:10px 10px 5px 5px; width:200px; height:200px;">
+    <img src="assets\media\images\c_club.jpg " alt="c_club image" style=" border-radius:100%; width:200px; height: 200px;display: block;margin-left: auto;margin-right: auto;width: 10%;">
     <h3 style="color:#10db76">description:</h3>
     <p style="color:#AE4CCF">C-CLUB is a college club. Every college can have different branches. Each branch can have different sections with number of students. Probably all sections can not communicate with each other. My project is to make all the sections interact with eachother and share their daily activities. </p>
 </body>
